config/gateway/httproute-rest.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: data-connect-hub
  labels:
    app.kubernetes.io/part-of: data-connect-hub
spec:
  parentRefs:
    - name: odh-gateway
      namespace: opendatahub
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/data
      backendRefs:
        - name: rest-service
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /arrow.flight.protocol
      backendRefs:
        - name: flight-service
          port: 50051
